Resolve element overlap

--- a/src/css/bookmark.css
+++ b/src/css/bookmark.css
@@ -45,8 +45,15 @@
     align-items: center;
 }
 
+#bookmark>section>#bookmarkList>li>#Bookmarkbtn {
+    display: flex;
+    width: 10%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
 
-#bookmark>section>#bookmarkList>li>button {
+#bookmark>section>#bookmarkList>li>#Bookmarkbtn>button {
     width: 25px;
     height: 25px;
     border: none;
