--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -35,7 +35,8 @@
     min-height: 30px;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-shrink: 0;
 }
 
 #timeline>section>#timelineList>li>span {
@@ -45,7 +46,15 @@
     align-items: center;
 }
 
-#timeline>section>#timelineList>li>button {
+#timeline>section>#timelineList>li>#Timelinebtn {
+    display: flex;
+    width: 10%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#timeline>section>#timelineList>li>#Timelinebtn>button {
     width: 25px;
     height: 25px;
     border: none;
@@ -65,7 +74,7 @@
 
 #timeline>section>#timelineList>li>details>summary {
     display: flex;
-    height: 30px;
+    min-height: 30px;
     align-items: center;
     position: relative;
 }
@@ -81,7 +90,7 @@
     border: solid #ffffff;
     border-width: 3px 3px 0 0;
     transform: translateY(-30%) rotate(45deg);
-    transition: transform 0.3s ease, border 0.5s ease;;
+    transition: transform 0.3s ease, border 0.5s ease;
 }
 
 #timeline>section>#timelineList>li>details[open]>summary::after {
@@ -99,7 +108,7 @@ body.light-mode #timeline>section>#timelineList>li>details>summary::after {
     border: solid #000000;
     border-width: 3px 3px 0 0;
     transform: translateY(-30%) rotate(45deg);
-    transition: transform 0.3s ease, border 0.5s ease;;
+    transition: transform 0.3s ease, border 0.5s ease;
 }
 
 body.dark-mode #timeline>section>#timelineList>li>details>summary::after {
@@ -113,7 +122,7 @@ body.dark-mode #timeline>section>#timelineList>li>details>summary::after {
     border: solid #ffffff;
     border-width: 3px 3px 0 0;
     transform: translateY(-30%) rotate(45deg);
-    transition: transform 0.3s ease, border 0.5s ease;;
+    transition: transform 0.3s ease, border 0.5s ease;
 }
 
 body.light-mode #timeline>section>#timelineList>li>details[open]>summary::after {
@@ -124,24 +133,41 @@ body.dark-mode #timeline>section>#timelineList>li>details[open]>summary::after {
     transform: translateY(-50%) rotate(135deg);
 }
 
-#timeline>section>#timelineList>li>details>p {
+#timeline>section>#timelineList>li>details>ul {
     display: flex;
     width: 100%;
-    height: 25px;
-    margin: 5px 0 5px 0;
-    flex-direction: row;
-    align-items: center;
+    height: auto;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
 }
 
-#timeline>section>#timelineList>li>details>p>span {
-    width: 25%;
+#timeline>section>#timelineList>li>details>ul>li {
+    width: 95%;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    margin: 5px 0 5px 5%;
 }
 
-#timeline>section>#timelineList>li>details>p>button {
+#timeline>section>#timelineList>li>details>ul>li>span {
+    font-size: 12px;
+    display: flex;
+    width: 90%;
+    height: 30px;
+    align-items: center;
+}
+
+#timeline>section>#timelineList>li>details>ul>li>#Timelinebtn {
+    display: flex;
+    width: 10%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#timeline>section>#timelineList>li>details>ul>li>#Timelinebtn>button {
     width: 25px;
     height: 25px;
     border: none;
